crates/service/tests/diagnostics/snapshots/features__diagnostics__global_mut__immutable.snap
---
source: crates/service/tests/diagnostics/global_mut.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 5,
          "character": 16
        },
        "end": {
          "line": 5,
          "character": 17
        }
      },
      "severity": 1,
      "code": "global-mutation",
      "source": "wat",
      "message": "mutating an immutable global is not allowed",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 2,
                "character": 10
              },
              "end": {
                "line": 2,
                "character": 13
              }
            }
          },
          "message": "immutable global type"
        }
      ]
    }
  ]
}
