crates/service/tests/diagnostics/snapshots/features__diagnostics__global_mut__undef.snap
---
source: crates/service/tests/diagnostics/global_mut.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 3,
          "character": 4
        },
        "end": {
          "line": 3,
          "character": 18
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [any], found []"
    },
    {
      "range": {
        "start": {
          "line": 3,
          "character": 16
        },
        "end": {
          "line": 3,
          "character": 17
        }
      },
      "severity": 1,
      "code": "undef",
      "source": "wat",
      "message": "cannot find `0` in this scope"
    }
  ]
}
